tests/snapshots/compiler_error_fixtures/instance_unknown_class.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/instance_unknown_class.flx
== compile ==
failed (compile)
== diagnostics ==
error[E441]: Unknown Type Class

No type class `Foo` is defined.

  examples/compiler_errors/instance_unknown_class.flx:10:1
   |
10 | instance Foo<Int> {
   | ^^^^^^^^^^^^^^^^^^^
11 |     fn bar(x) { x }
   | ^^^^^^^^^^^^^^^^^^^
12 | }
   | ^

Hint:
  Declare the class first: `class Foo<a> { ... }`
== stdout ==
<not executed>
